horizontal overflow when vertical scrollbar appeared solved

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@ body {
     min-height: 100vh;
     height: fit-content;
     width: 100vw;
+    max-width: calc(100vw - 10px); /* for scrollbar */
 }
 
 /* scrollbar */
